--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "vue": "^3.2.31",
     "vue-router": "4.0.11",
     "xlsx": "^0.18.4",
-    "bpmn-js": "^7.3.1",
+    "bpmn-js": "^7.5.0",
     "bpmn-js-properties-panel": "^0.37.2",
-    "bpmn-moddle": "^6.0.0",
-    "camunda-bpmn-moddle": "^4.5.0",
-    "diagram-js-minimap": "2.0.4"
+    "bpmn-moddle": "^1.0.2",
+    "camunda-bpmn-moddle": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.22",
