--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ VITE_OUTPUT_DIR=dist
 VITE_BASE_URL=/
 
 # 服务端路径前缀
-VITE_API_BASE_URL=/api
+VITE_API_BASE_URL=/warehouse
 
 # 本地token存储名称
 VITE_LOCAL_TOKEN=Sure-Token
@@ -22,6 +22,7 @@ VITE_HEADER_TOKEN=Token
 VITE_LOGIN_ROUTE_NAME=Login
 
 # 后台地址的上下文路径
-VITE_WAREHOUSE_CONTEXT_PATH=http://localhost:9999/warehouse
+#VITE_WAREHOUSE_CONTEXT_PATH=http://localhost:9999/warehouse
+VITE_WAREHOUSE_CONTEXT_PATH=http://175.178.234.102:9999/warehouse
 
 #VITE_WAREHOUSE_CONTEXT_PATH=http://8.141.144.116:9999/warehouse
