--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bpmn-js": "^7.5.0",
+    "bpmn-js-properties-panel": "^0.37.2",
+    "bpmn-moddle": "^1.0.2",
+    "camunda-bpmn-moddle": "^4.5.0",
+    "decimal.js": "^10.4.3",
     "echarts": "^5.3.2",
     "element-plus": "2.0.4",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "vue": "^3.2.31",
     "vue-router": "4.0.11",
-    "xlsx": "^0.18.4",
-    "bpmn-js": "^7.5.0",
-    "bpmn-js-properties-panel": "^0.37.2",
-    "bpmn-moddle": "^1.0.2",
-    "camunda-bpmn-moddle": "^4.5.0"
+    "xlsx": "^0.18.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.22",
