delete: delete categoryPage

--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ VITE_LOGIN_ROUTE_NAME=Login
 
 # 后台地址的上下文路径
 #VITE_WAREHOUSE_CONTEXT_PATH=http://localhost:9999/warehouse
-VITE_WAREHOUSE_CONTEXT_PATH=http://175.178.234.102:9999/warehouse
+#VITE_WAREHOUSE_CONTEXT_PATH=http://175.178.234.102:9999/warehouse
+VITE_WAREHOUSE_CONTEXT_PATH=https://youan.bobochang.work/warehouse
 
 #VITE_WAREHOUSE_CONTEXT_PATH=http://8.141.144.116:9999/warehouse
